--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ section#top img{
     margin-left: 25px;
     height: 35px;
     margin-top: 15px;
-    /* margin-left: 35px; */
+    margin-left: 35px;
 }
 #search-box-wrapper{
     padding: 1px;
